# pygame-texteditor

./: .flake8  .gitignore  .pre-commit-config.yaml  .pypirc  CHANGELOG.md  DEV-NOTIZEN.md  Environment.py  LICENSE  MANIFEST.in  README.md  TextEditor.py  __init__.py  _input_handling.py  _rendering.py  _scrollbar_vertical.py  how-to-use.py  how-to-use.spec  pyproject.toml  requirements.txt  setup.py  test.py  test_setup.py
Curriculum/: Lesson.py  Lesson_1.py  Lesson_2.py  Lesson_3.py  Lesson_Template.py
pygame_texteditor/: ColorFormatter.py  PybrainzzFormatter.py  TextEditor.py  __init__.py  _caret.py  _customization.py  _editor_getters.py  _input_handling.py  _input_handling_keyboard.py  _input_handling_keyboard_highlight.py  _input_handling_mouse.py  _letter_operations.py  _other.py  _rendering.py  _rendering_highlighting.py  _rendering_syntax_coloring.py  _scrollbar_vertical.py  _usage.py
pygameeditor/: _rendering.py
pygametexteditor/: PybrainzzFormatter.py  TextEditor.py  __init__.py  _caret.py  _customization.py  _delete_operations.py  _editor_getters.py  _input_handling.py  _input_handling_keyboard.py  _input_handling_keyboard_highlight.py  _input_handling_mouse.py  _letter_operations.py  _line_getters.py  _other.py  _render_syntax_coloring.py  _rendering.py  _rendering_highlighting.py  _rendering_syntax_coloring.py  _scrollbar_vertical.py  _usage.py
src/pygame_texteditor/: ColorFormatter.py  TextEditor.py  _caret.py  _customization.py  _editor_getters.py  _input_handling_keyboard.py  _input_handling_keyboard_highlight.py  _input_handling_mouse.py  _other.py  (+6 more)
(+7 files in other folders)
